// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details matches snapshot 1`] = `
<div
  className="Details"
>
  <h1>
    dvdv
  </h1>
  <nav>
    <div>
      <button
        onClick={[Function]}
        type="button"
      >
        <span
          className="material-symbols-outlined"
        >
          arrow_back_ios
        </span>
      </button>
    </div>
    <div>
      <h1>
        DETAILS
      </h1>
    </div>
  </nav>
  <div>
    <div>
      <div>
        <div>
          <img
            alt="flag"
            src="https://restcountries.com/data/afg.svg"
          />
        </div>
        <div>
          <h1>
            Afghanistan
          </h1>
          <p>
            LAT:
             
            20
          </p>
          <p>
            LONG:
             
            20
          </p>
        </div>
      </div>
    </div>
    <div>
      <p>
        COUNTRY DETAILS
      </p>
    </div>
    <ul>
      <li>
        <p>
          <span>
            Common name
          </span>
          <span>
            Afghanistan
          </span>
        </p>
        <p>
          <span>
            Official name
          </span>
          <span>
            Islamic Republic of Afghanistan
          </span>
        </p>
        <p>
          <span>
            Capital
          </span>
          <span>
            Kabul
          </span>
        </p>
        <p>
          <span>
            Country region
          </span>
          <span>
            Asia
          </span>
        </p>
        <p>
          <span>
            Country-subregion
          </span>
          <span>
            Southern Asia
          </span>
        </p>
        <p>
          <span>
            Country-population
          </span>
          <span>
            32225560
          </span>
        </p>
        <p>
          <span>
            Country-area
          </span>
          <span>
            652230
          </span>
        </p>
        <p>
          <span>
            Continent
          </span>
          <span />
        </p>
        <p>
          <span>
            UTC+04:30
          </span>
        </p>
        <p>
          <span>
            Start of the week
          </span>
          <span>
            Saturday
          </span>
        </p>
        <p>
          <span>
            Street view
          </span>
          <a
            href="https://www.google.com/maps/place/Afghanistan"
          >
            google maps
          </a>
        </p>
        <p>
          <span>
            Language:
          </span>
          <ul>
            <li>
              Pashto
            </li>
            <li>
              Uzbek
            </li>
            <li>
              Turkmen
            </li>
          </ul>
        </p>
        <p>
          <span>
            Currency:
          </span>
          <ul>
            <li>
              Afghan afghani
               
              (
              ؋
              )
            </li>
          </ul>
        </p>
      </li>
    </ul>
  </div>
</div>
`;

exports[`DetailsNavbar matches snapshot 1`] = `
<nav>
  <div>
    <button
      onClick={[Function]}
      type="button"
    >
      <span
        className="material-symbols-outlined"
      >
        arrow_back_ios
      </span>
    </button>
  </div>
  <div>
    <h1>
      DETAILS
    </h1>
  </div>
</nav>
`;

exports[`Home matches snapshot 1`] = `
<div
  className="home"
>
  <nav>
    <div>
      <a
        aria-current="page"
        className="active"
        href="/"
        onClick={[Function]}
      >
        Countries
      </a>
    </div>
    <div>
      <div>
        <button
          onClick={[Function]}
          type="button"
        >
          <span
            className="material-symbols-outlined"
          >
            search
          </span>
        </button>
      </div>
    </div>
  </nav>
  <div>
    <p>
      LIST OF COUNTRIES
    </p>
  </div>
  <ul>
    <a
      href="/Details/Afghanistan"
      onClick={[Function]}
    >
      <li>
        <span
          className="material-symbols-outlined"
        >
          arrow_circle_right
        </span>
        <div>
          <img
            alt="flag"
            src="https://restcountries.com/data/afg.svg"
          />
        </div>
        <div>
          <p>
            Afghanistan
          </p>
          <p>
            LAT:
             
            20
          </p>
          <p>
            LONG:
             
            20
          </p>
        </div>
      </li>
    </a>
    <a
      href="/Details/Albania"
      onClick={[Function]}
    >
      <li>
        <span
          className="material-symbols-outlined"
        >
          arrow_circle_right
        </span>
        <div>
          <img
            alt="flag"
            src="https://restcountries.com/data/alb.svg"
          />
        </div>
        <div>
          <p>
            Albania
          </p>
          <p>
            LAT:
             
            20
          </p>
          <p>
            LONG:
             
            20
          </p>
        </div>
      </li>
    </a>
  </ul>
</div>
`;

exports[`HomeNavbar matches snapshot 1`] = `
<nav>
  <div>
    <a
      aria-current="page"
      className="active"
      href="/"
      onClick={[Function]}
    >
      Countries
    </a>
  </div>
  <div>
    <div>
      <button
        onClick={[Function]}
        type="button"
      >
        <span
          className="material-symbols-outlined"
        >
          search
        </span>
      </button>
    </div>
  </div>
</nav>
`;
